--- a/config.yaml
+++ b/config.yaml
@@ -9,12 +9,12 @@ general:
   show_all_in_taskbar: false
 gaps:
   scale_with_dpi: true
-  inner_gap: '5px'
+  inner_gap: '3px'
   outer_gap:
-    top: '3px'
-    right: '3px'
-    bottom: '3px'
-    left: '3px'
+    top: '2px'
+    right: '2px'
+    bottom: '2px'
+    left: '2px'
 
 window_effects:
   focused_window:
@@ -68,7 +68,7 @@ window_behavior:
     fullscreen:
       # Maximize the window if possible. If the window doesn't have a
       # maximize button, then it'll be fullscreen'ed normally instead.
-      maximized: false
+      maximized: true
 
       # Whether to show fullscreen windows as always on top.
       shown_on_top: false
